package facade;

public class ProcesadorPedido {

    public void procesar() {
        System.out.println("Procesando pedido...");
    }
}